# genfabtools

./: .env.local  .env.template  .gitignore  DEV_README.md  README_DEPLOY.md  occupant_calculator.sln  package-lock.json  package.json  render.yaml  start-dev.bat
sitefit/: ARCHITECTURE.md  pyproject.toml  requirements.txt  run_server.py  test_coords.dxf  test_export.dxf
sitefit/sitefit/: __init__.py
sitefit/sitefit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sitefit/sitefit/api/: __init__.py  app.py  schemas.py
sitefit/sitefit/api/routes/: __init__.py  building.py  export.py  feasibility.py  legacy.py  parking.py  parking_engine.py  sitegen.py
sitefit/sitefit/building/: __init__.py  floor_plate.py  massing.py  setbacks.py  unit_mix.py
sitefit/sitefit/constraints/: __init__.py  parking_ratio.py  setback_rules.py  zoning.py
sitefit/sitefit/core/: __init__.py  geometry.py  operations.py
sitefit/sitefit/optimizer/: __init__.py  configuration.py  generator.py  scorer.py  solver.py
sitefit/sitefit/parking/: __init__.py  bay.py  circulation.py  drive_aisle.py  layout_generator.py  optimizer.py  stall.py
sitefit/sitefit/parking_engine/: __init__.py
sitefit/sitefit/parking_engine/v2/: __init__.py  circulation_first.py  circulation_loop.py  schemas.py  (+9 more)
sitefit/tests/: __init__.py  test_api.py  test_building.py  test_connectivity.py  test_constraints.py  test_geometry.py  test_geometry_60.py  test_operations.py  test_optimizer.py  test_parking.py  test_residual_recovery.py  test_v2_integration.py  test_zone_orchestrator.py  test_zones_v2.py
(+198 files in other folders)
